# TFM

./: .gitignore  README.md  _config.yml  index.html
_layouts/: default.html
_posts/: 2015-06-10-welcome-to-jekyll.markdown
_site/: feed.xml  index.html
_site/about/: index.html
_site/archives/: index.html
_site/wiki/: index.html
classification/document-class-master/: categ.py
classification/mallet/: pom.xml
classification/nltk/: nltk_classifier.py
classification/spark/: spark.py
contentsearch/: BACKGROUND.md
contentsearch/solr/: README.md
documentation/: llncs.cls  main.tex
langdetection/langidPy/: .gitignore
postagger/lingpipe/: pom.xml
postagger/nltk/: nltk_postagger.py
postagger/opennlp/: pom.xml
projects/contentsearch/: README.md
projects/weighterms/: README.md
tfm_projects/langdetection/: BACKGROUND.md  README.md
tfm_projects/langdetection/frameworks/spirit-guess_language/: .hg_archival.txt  .hgignore  .hgtags  README.rst  generate_data.py  generate_trigrams.py  setup.cfg  setup.py  test.py
tfm_projects/langdetection/frameworks/spirit-guess_language/trigrams/: eo
tfm_projects/postagger/: BACKGROUND.md  README.md
tfm_projects/tokenizer/: README.md
tokenizer/: BACKGROUND.md
tokenizer/mallet/: pom.xml
tokenizer/nltk/: TetsWith10mDocs.py  nltk_test.py
tokenizer/opennlp/: README.md
weighterms/kea5/: pom.xml
weighterms/keyphrase_extractor/: data.json  keyphrase.txt  print.py
weighterms/maui/: pom.xml
weighterms/rake/: rake.py
weighterms/samuraizer/: samuraizer_test.py
wiki/: index.markdown
(+130 files in other folders)
