[global]
setup_hooks =
    setup.default_hook

[metadata]
name = guess_language-spirit
version = 0.5.2
summary = Guess the natural language of a text
description-file = README.rst
home-page = https://bitbucket.org/spirit/guess_language
download-url = https://bitbucket.org/spirit/guess_language/downloads
author = spirit
author-email = hiddenspirit@gmail.com
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.2
requires-python = >=2.7,!=3.0,!=3.1

[files]
packages =
    guess_language
    guess_language.data
    guess_language.data.models
extra_files =
    COPYING
    COPYING.LESSER
    README.rst
    generate_data.py
    setup.py
    test.py
    trigrams/*
